Document the Render secret file as the recommended configuration
A Render secret file under /etc/secrets is exactly the "own override
file passed as the last -config argument" the configuration layering
was designed for, and unlike the environment layer it can set every
key — generator.apiKey and the email.* values have no environment
variable. The deployment guide now recommends it, including the Docker
Command override (deliberately without application-container.yaml:
that layer demands all of its variables, so it is either/or) and a
full template with the production pitfalls annotated — internal
database details, the public frontendBaseUrl, the Mollie webhook
format, and trustForwardedFor behind Render's proxy.

The environment-variable path stays documented for local docker run
and the backend-only verification stack.